<?xml version="1.0" encoding="utf-8"?>
<!--<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"-->
    <!--xmlns:app="http://schemas.android.com/apk/res-auto"-->
    <!--xmlns:tools="http://schemas.android.com/tools"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="match_parent"-->
    <!--app:layout_behavior="@string/appbar_scrolling_view_behavior"-->
    <!--tools:context="com.example.android.groupschedulecoordinator.GroupActivity"-->
    <!--tools:showIn="@layout/activity_group"-->
    <!--android:fillViewport="true"-->
    <!--android:paddingBottom="@dimen/activity_vertical_margin">-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.android.groupschedulecoordinator.GroupActivity"
    android:fillViewport="true"
    android:paddingBottom="@dimen/activity_vertical_margin">



    <TabHost
        android:id="@+id/tabHost"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id = "@+id/groupName"
                android:textSize="25sp"
                />

            <TabWidget
                android:id="@android:id/tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"/>

            <FrameLayout
                android:id="@android:id/tabcontent"
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <LinearLayout
                    android:id="@+id/info"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <!--Need to add actual activities for adding new meeting-->
                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text = "Add New Meeting"
                        android:layout_gravity="center"
                        android:paddingTop="8dp"
                        android:paddingBottom="8dp"
                        android:layout_marginBottom="@dimen/activity_vertical_margin"
                        android:id = "@+id/btnNewMeeting"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text = "Meetings Scheduled:"
                        android:textSize="20sp"
                        android:id = "@+id/tvMeetings"/>

                    <ListView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id = "@+id/lvMeetings">


                    </ListView>



                </LinearLayout>
                <!--
                <LinearLayout
                    android:id="@+id/calendar"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <com.alamkanak.weekview.WeekView
                        android:id="@+id/weekView"
                        android:layout_width= "300dp"
                        android:layout_height="match_parent"
                        app:eventTextColor="@android:color/white"
                        app:textSize="12sp"
                        app:hourHeight="60dp"
                        app:headerColumnPadding="8dp"
                        app:headerColumnTextColor="#8f000000"
                        app:headerRowPadding="12dp"
                        app:columnGap="8dp"
                        app:noOfVisibleDays="1"
                        app:headerRowBackgroundColor="#ffefefef"
                        app:dayBackgroundColor="#05000000"
                        app:todayBackgroundColor="#1848adff"
                        app:headerColumnBackground="#ffffffff"
                        android:layout_gravity="center"
                        />


                </LinearLayout>
                -->

                <LinearLayout
                    android:id="@+id/members"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ListView
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:id="@+id/lvMembers">
                    </ListView>

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id = "@+id/addmembers"
                        android:layout_gravity="center"
                        android:text = "Add Member"/>




                </LinearLayout>




            </FrameLayout>
        </LinearLayout>
    </TabHost>
<!--</android.support.v4.widget.NestedScrollView>-->
</RelativeLayout>